tests/invalid/closure_init.stderr
error[E0308]: mismatched types
 --> $DIR/closure_init.rs:6:29
  |
6 |     c.get_or_init_dependent(|_| s.as_ref().unwrap());
  |                             ^^^^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found closure
  |
  = note: expected fn pointer `fn(&()) -> &String`
                found closure `[closure@$DIR/tests/invalid/closure_init.rs:6:29: 6:52]`
